--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 # framework
-torch
-torchvision
-torchaudio
 regex
 iopath
 oss2
@@ -35,6 +32,7 @@ pillow
 opencv-python
 timm>=0.5.0
 http://ofasys.oss-cn-zhangjiakou.aliyuncs.com/dependency/clip-1.0-py3-none-any.whl
+diffusers
 matplotlib
 
 # audio
@@ -46,7 +44,4 @@ soundfile
 editdistance
 
 # video
-av
-
-# motion
-transforms3d
+av; python_version>="3.7"
